--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -107,8 +107,7 @@ html{
 }
 .btn_name{  
     color:#f7f3ea;
-    text-decoration: none;
-    
+    text-decoration: none;   
 }
 button{
     padding:1.2rem 3.5rem;
@@ -374,7 +373,7 @@ i{
     font-weight: bolder;
     margin-top: 2rem;
 }
-#designation_section6{
+.designation_section6{
     color: #ffdd99;   
 }
 /*service section 6 end*/
